# Playgrounds

./: .gitignore
.github/: CODEOWNERS
.github/constants/: aws-role.yaml
.github/workflows/: depoloy-by-env.yaml
flutter/beauty_cheer_girls/: README.md  pubspec.yaml
flutter/beauty_cheer_girls/lib/: main.dart
flutter/beauty_cheer_girls/test/: widget_test.dart
flutter/get_fit_clone/: README.md  pubspec.yaml
flutter/get_fit_clone/linux/: CMakeLists.txt  my_application.cc
flutter/get_fit_clone/test/: widget_test.dart
flutter/get_fit_clone/web/: index.html  manifest.json
flutter/get_fit_clone/windows/: CMakeLists.txt
flutter/image_search/: pubspec.yaml
flutter/image_search/lib/: main.dart
flutter/janken/: pubspec.yaml
flutter/janken/lib/: main.dart
flutter/todo_sqlite/: pubspec.yaml
flutter/todo_sqlite/lib/: home_page.dart  main.dart  note_view_model.dart
flutter/todo_sqlite/linux/: CMakeLists.txt
flutter/tutorial/: README.md  pubspec.yaml
flutter/tutorial/lib/: main.dart  (+3 more)
flutter/widget_sample/: pubspec.yaml
git-selfhost/: README.md  docker-compose.yaml
github/: test.txt
go/gin-mongo/: Dockerfile  docker-compose.yaml  go.mod  main.go
monitoring/: docker-compose.yaml
object-storage/minio/: docker-compose.yaml
python/effective_python/: pyproject.toml
python/pyqt-practice/: .gitignore  pyproject.toml
python/pyqt-practice/pyqt_practice/: __main__.py
python/pyqt-practice/pyqt_practice/views/: evaluate.ui  main.ui
python/pyqt-practice/tests/: test_pyqt_practice.py
type-script/ts-practice/: package-lock.json  package.json
(+59 files in other folders)
